# Command

./: .gitmodules  CMakeLists.txt  README.md  project.cmake
Components/: CMakeLists.txt
Components/Gimbal/: CMakeLists.txt  Gimbal.cpp  Gimbal.fpp  Gimbal.hpp
Components/Gimbal/docs/: sdd.md
Components/PiCam/: CMakeLists.txt  PiCam.cpp  PiCam.fpp  PiCam.hpp  Picamera2Wrapper.hpp
Components/PiCam/docs/: sdd.md
GDep/: CMakeLists.txt  Main.cpp  README.md
GDep/Top/: CMakeLists.txt  GDepPackets.xml  GDepTopology.cpp  GDepTopology.hpp  GDepTopologyDefs.hpp  instances.fpp  topology.fpp
